--- a/EasyCircleSample/src/main/res/layout/fragment_main.xml
+++ b/EasyCircleSample/src/main/res/layout/fragment_main.xml
@@ -9,18 +9,27 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pl.polak.circle.example.MainActivity$PlaceholderFragment">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <pl.polak.circle.CircleProgressBar
         android:id="@+id/circle_progress_bar"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_centerInParent="true"
-        circle:circleColor="#f5d600"
+        android:layout_centerHorizontal="true"
+        circle:circleColor="#ff0370ff"
         circle:circleStrokeWidth="20"
         circle:circleStartAngle="270"/>
+
+    <pl.polak.circle.BorderCircleProgressBar
+        android:id="@+id/border_circle_progress_bar"
+        android:layout_below="@id/circle_progress_bar"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        circle:circleColor="#ff61a100"
+        circle:circleStrokeWidth="20"
+        circle:circleStartAngle="270"
+        circle:innerCircleColor="#ff61a100"
+        circle:innerCircleStrokeWidth="3"
+        circle:outerCircleColor="#ff61a100"
+        circle:outerCircleStrokeWidth="3"/>
 
 </RelativeLayout>
